# KalmanFilter

./: .gitignore  CMakeLists.txt  main.cpp  mathObosnovaniye.md  report_for_professor.md  result.md  run.sh  temp_pdf.txt  walkthrough.md
cpp/model/: Visualize.cpp  Visualize.h  matrix.h  vector.cpp  vector.h
model/: KalmanFilter.cpp  KalmanFilter.h  MotionIntegrator.cpp  MotionIntegrator.h  ParameterEstimator.cpp  ParameterEstimator.h  Visualize.cpp  Visualize.h  matrix.cpp  matrix.h  vector.cpp  vector.h
python/: comparison_methods.py  kalman_experiments.py  kalman_models.py
